# Vehicle_model

./: README.md
vehicle_demo/: CMakeLists.txt
vehicle_demo/launch/: demo.launch
vehicle_demo/plugins/: VehiclePlugin.cc  VehiclePlugin.hh
vehicle_description/: CMakeLists.txt  package.xml
vehicle_description/config/: joint_names_vehicle.yaml
vehicle_description/launch/: display.launch  gazebo.launch
vehicle_description/meshes/: base_link.STL  chassis.STL  fl_axle.STL  fr_axle.STL  front_left_wheel.STL  front_right_wheel.STL  rear_left_wheel.STL  rear_right_wheel.STL  steering_link.STL
vehicle_description/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh
vehicle_description/urdf/: vehicle.csv  vehicle.urdf
